formataçao da saida de log no console

--- a/Worker/appsettings.Development.json
+++ b/Worker/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "Worker": {
-    "Interval": 30000
+    "__comments": "1 segundos",
+    "Interval": 1000
   },
   "Logging": {
     "LogLevel": {
