--- a/Worker/appsettings.Production.json
+++ b/Worker/appsettings.Production.json
@@ -1,10 +1,11 @@
 {
   "Worker": {
-    "Interval": 30000
+    "__comments": "10 segundos",
+    "Interval": 10000
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
