--- a/Worker/appsettings.json
+++ b/Worker/appsettings.json
@@ -1,7 +1,11 @@
 {
+  "Worker": {
+    "__comments": "10 segundos",
+    "Interval": 10000
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
