acidionado projeto de testes para a solução

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "msbuildProjectTools.nuget.includePreRelease": false
+    "msbuildProjectTools.nuget.includePreRelease": false,
+    "editor.fontFamily": "'consolas nf'"
 }
