--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -4,5 +4,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="*"/>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
+    <ProjectReference Include="..\Abstraction\Abstraction.csproj"/>
   </ItemGroup>
 </Project>
