--- a/src/Worker/Worker.csproj
+++ b/src/Worker/Worker.csproj
@@ -4,13 +4,15 @@
     <UserSecretsId>dotnet-Worker-D94BBC65-6F51-4B90-B0EA-8A51DF495196</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3"/>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101"/>
+    <PackageReference Include="AWSSDK.SQS" Version="3.3.102.103"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Abstraction\Abstraction.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Abstraction\Abstraction.csproj"/>
+    <ProjectReference Include="..\Domain\Domain.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest" />
+    <Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest"/>
   </ItemGroup>
 </Project>
