--- a/src/Worker/appsettings.Production.json
+++ b/src/Worker/appsettings.Production.json
@@ -9,5 +9,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AWS": {
+    "Sqs": {
+      "Profile": "local-test-profile",
+      "Region": "us-west-2"
+    }
   }
 }
